--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "@vueuse/core": "^8.9.2",
     "autoprefixer": "^10.4.7",
     "cypress": "^10.1.0",
     "eslint": "^8.5.0",
