--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/jsdom": "^16.2.14",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^16.11.41",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
@@ -52,6 +53,7 @@
     "eslint-plugin-vue": "^9.0.0",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
+    "pinia": "^2.0.16",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
     "start-server-and-test": "^1.14.0",
