--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^16.11.41",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.0",
@@ -66,7 +67,9 @@
     "tailwindcss": "^3.1.4",
     "typescript": "~4.7.4",
     "vite": "^2.9.12",
+    "vite-plugin-windicss": "^1.8.6",
     "vitest": "^0.15.1",
-    "vue-tsc": "^0.38.1"
+    "vue-tsc": "^0.38.1",
+    "windicss": "^3.5.6"
   }
 }
